# CV-to-Role-Match-Analyzer

./: .gitignore  README.md  Requirements Engineering LLM Interactions.docx  Requirements Engineering LLM interactions.txt  pyproject.toml  setup.cfg
chats/: architecture_LLM_chats.txt  architecture_LLM_interactions.txt  design_LLM_interactions.txt  requirements_engineering_LLM_interactions.txt  testing_LLM_interactions
src/cv_to_role_analyzer/: cv_analyzer.py  llm.py  report.py  utils.py  validation.py
tests/data/: test_cv.txt  test_role.txt
tests/system/: test_system.py
tests/unit/: test_analyze_match.py
